# respawn

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md
apps/gateway/: Dockerfile  alembic.ini  pyproject.toml
apps/gateway/src/: __init__.py  config.py  main.py
apps/gateway/src/adapters/: automatic1111_image.py  base.py  comfyui_image.py  image_generation_base.py  mock_backend.py  mock_control.py  mock_image.py  mock_search.py  ollama_backend.py  searxng_search.py  web_search_base.py
apps/gateway/src/api/: chat.py  compatibility.py  files.py  health.py  metrics.py  models.py  prompt_templates.py  responses.py
apps/gateway/src/observability/: logging.py  metrics.py  model_io.py
apps/gateway/src/schemas/: errors.py  files.py  models.py  prompts.py  responses.py  streaming.py  tools.py
apps/gateway/src/security/: auth.py
apps/gateway/src/services/: compatibility_manifest.py  context_management.py  conversation_builder.py  id_generator.py  idempotency.py  image_generation.py  include_expansions.py  model_capabilities.py  multimodal_inputs.py  platform_files.py  prompt_cache.py  prompt_templates.py  reasoning_encryption.py  reasoning_summaries.py  response_history_builder.py  response_service.py  responses_compat.py  structured_outputs.py  tool_call_arguments.py  tool_loop.py  usage_meter.py  web_search.py
apps/gateway/src/storage/: __init__.py  models.py  repository.py
apps/gateway/src/streaming/: events.py  sse.py
apps/gateway/src/tools/: registry.py
apps/gateway/tests/: conftest.py  helpers.py
apps/gateway/tests/contract/: test_sdk_shape.py  (+1 more)
(+57 files in other folders)
